complete redis-version
