# work3/jsbjkskbs/server-redis/datastruct/datastruct.go
@@ -3,8 +3,8 @@ package datastruct
 //在mysql版本不加除json以外的tag能正常转化interface{}到datastruct.User
 //而在redis版本却要加与loginstruct/registerstruct一样的tag,应该不是redis的bug,是否为语言的问题?
 type User struct {
-	Username string `form:"username" json:"username" vd:"(len($)>0&&len($)<64); msg:'Illegal Username'"`
-	Password string `form:"password" json:"password" vd:"(len($)>5&&len($)<16); msg:'Illegal Password'"`
+	Username string `json:"username"`
+	Password string `json:"password"`
 }
 
 type ShortResponse struct {
@@ -21,14 +21,15 @@ type SendingJSONFormat struct {
 }
 
 type SendingJSONData struct {
-	Items      []TodolistBindJSONSend `json:"items"`
-	TotalItems int                    `json:"count"`
+	Items []TodolistBindJSONSend `json:"items"`
+	Count int                    `json:"items_count"`
+	Total int                    `json:"total"`
 }
 
 type TodolistBindJSONReceive struct {
 	Title    string `json:"title" example:"标题"`
 	Owner    string `json:"owner" swaggerignore:"true"`
-	Text     string `json:"todo" example:"文本"`
+	Text     string `json:"text" example:"文本"`
 	Deadline string `json:"deadline" example:"2077-01-01 01:01:01"`
 	Status   bool   `json:"isdone" swaggerignore:"true"`
 }
@@ -37,7 +38,7 @@ type TodolistBindJSONSend struct {
 	Id       int64  `json:"msgId"`
 	Title    string `json:"title"`
 	Owner    string `json:"owner"`
-	Text     string `json:"todo"`
+	Text     string `json:"text"`
 	Addtime  string `json:"addtime"`
 	Deadline string `json:"deadline"`
 	Status   bool   `json:"isdone"`
@@ -47,4 +48,17 @@ type TodolistBindJSONSendArray struct {
 	Todolist struct {
 		List []TodolistBindJSONSend
 	} `json:"todolist"`
+}
+
+type TodolistBindRedisCondition struct {
+	Keyword string  `json:"keyword" example:"我超OP"`
+	Status  bool    `json:"isdone" example:"false"`
+	Idlist  []int64 `json:"idlist"`
+	Method  int     `json:"method" example:"1"`
+}
+
+type TodolistBindRedisUpdate struct {
+	Idlist    []int64 `json:"idlist"`
+	NewStatus bool    `json:"isdone" example:"false"`
+	Method    int     `json:"method" example:"1"`
 }
